# biohackathon-einburgh

./: GCF_000182925.2.faa.tsv  README.md  main.py  pyproject.toml  run.sh
.devcontainer/: Dockerfile  devcontainer.json
optimisation/: optimise.py
visualisation/: add_oxygen.py  app.py  build_model (1).py  build_model.py  dna_to_protein_fasta.py  gem_io.py  genome_validate.py  header.py  media.py  model_engine.py  ncbi_client.py  network.py  optimise.py  requirements.txt  sequence_utils.py  strains.py  theme.py  visuals.py
visualisation/new_features/: FEATURES_README.md  feature_input_panel.py  feature_model_loaders.py  feature_session_state.py  feature_visuals.py
