[project]
name = "biohackathon-einburgh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "biopython>=1.86",
    "carveme>=1.6.6",
    "cobra>=0.30.0",
    "networkx>=3.6.1",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "pyscipopt>=6.1.0",
    "pyvis>=0.3.2",
    "streamlit>=1.55.0",
]
